2010-09-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* font-lock.el (font-lock-beginning-of-syntax-function):
	Mark as obsolete.

2010-09-10  Glenn Morris  <rgm@gnu.org>

	* menu-bar.el (menu-bar-options-save): Fix handling of menu-bar
	and tool-bar modes.  (Bug#6211)
	(menu-bar-mode): Move setting of standard-value after the
	minor-mode definition, otherwise it seems to have no effect.

2010-09-08  Masatake YAMATO  <yamato@redhat.com>

	* progmodes/antlr-mode.el (antlr-font-lock-additional-keywords):
	Fix typo.  (Bug#6976)

2010-09-06  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* whitespace.el: Allow cleaning up blanks without blank
	visualization (Bug#6651).  Adjust help window for
	whitespace-toggle-options (Bug#6479).  Allow to use fill-column
	instead of whitespace-line-column (from EmacsWiki).  New version 13.1.
	(whitespace-style): Add new value 'face.  Adjust docstring.
	(whitespace-space, whitespace-hspace, whitespace-tab):
	Adjust foreground property face.
	(whitespace-line-column): Adjust docstring and type declaration.
	(whitespace-style-value-list, whitespace-toggle-option-alist)
	(whitespace-help-text): Adjust const initialization.
	(whitespace-toggle-options, global-whitespace-toggle-options):
	Adjust docstring.
	(whitespace-display-window, whitespace-interactive-char)
	(whitespace-style-face-p, whitespace-color-on): Adjust code.
	(whitespace-help-scroll): New fun.

2010-09-05  Alexander Klimov  <alserkli@inbox.ru>  (tiny change)

	* files.el (directory-abbrev-alist): Use \` as default regexp.

	* emacs-lisp/rx.el (rx-any): Don't explode ranges that end in special
	chars like - or ] (bug#6984).
	(rx-any-condense-range): Explode 2-char ranges.

2010-09-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* textmodes/bibtex.el:
	* proced.el: Update to new email for Roland Winkler <winkler@gnu.org>.

2010-09-02  Glenn Morris  <rgm@gnu.org>

	* desktop.el (desktop-path): Bump :version after 2009-09-15 change.
